Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5146

Bulk loads into partitioned table not working.

    XMLWordPrintable

Details

    Description

      We have:
      wsrep_load_data_splitting=on
      in our server.cnf file. Bulk loads into a partition table do not get replicated to the other nodes.

      Log file shows:

      131007 10:38:54 [Warning] WSREP: SQL statement was ineffective: LOAD DATA INFILE '/workspace3/tempspace/OnTargetPublish.load_file.24194.20131007103841' IGNORE
      INTO TABLE TRIGGERED_SENDS.LOG_BASED_SENDS_UNIV
      FIELDS TERMINATED BY '  '
      LINES TERMINATED BY '\n'
      (
              EMAIL_KEY,
              SEND_ID,
              @START_DTTM,
              @END_DTTM,
              ACTIVE_IND,
              CHR_DATA_OBJ
      )
      SET START_DTTM = STR_TO_DATE(@START_DTTM,'%Y%m%d%H%i%s'),
      END_DTTM = STR_TO_DATE(@END_DTTM,'%Y%m%d%H%i%s'),
      EVENT_DTTM = NULL,
      TO_DB_DTTM = NOW(),
      UPDT_DB_DTTM = NOW()
       => Skipping replication

      I think that may be normal - we want the records replicated, but not the sql statement itself.

      The table is partitoned on SEND_ID.
      I'm not sure if it is the partition table that is causing the issue or something else.

      Let me know if you need anything else to debug or have anything else you want us to try.
      Thanks.

      Attachments

        Activity

          People

            nirbhay_c Nirbhay Choubey (Inactive)
            matt.wheeler Matthew Wheeler
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.